--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ display: inline-block;
     }
 /*HEADER end*/
 
+
 /*PROMO begin*/
 .promo-main {
     background-color: #eeeeee;
@@ -109,24 +110,18 @@ display: inline-block;
 }
 
 .promo-slider {
-    width: 860px;    
+    width: 920px;    
     margin: 0 auto;
     background-color: #eeeeee;
     padding-bottom:55px;
 }
 
 .promo-slider .promo-text {
-    width: 369px;
+    width: 400px;
     float:left;
+    margin-left:70px;
 }
 
-.promo-slider .promo-img {
-    float:right;
-    width: 369px;
-    height: 231px;
-    background-image: url(img/slider1.png);
-    background-repeat: no-repeat;
-}
 
 .promo-text h1 {
     font-size: 36px;
@@ -147,14 +142,115 @@ display: inline-block;
     background-color: red;
     padding: 12px 70px;
 }
-/*PROMO end*/
+/*PROMO end  */
 
+/*PROMO SLIDER begin*/
+
+.promo-slider {
+    position: relative;
+    width:900px;
+}
+
+.promo-slider input[type=radio] {
+    display: none;
+}
+
+.promo-slider-inner {
+    overflow: hidden;
+    padding-top:30px;
+    padding-bottom:50px;
+    padding-left:10px;
+    padding-right: 0;
+}
+
+.promo-slider-slides .promo-text {
+    margin-left:70px;
+}
+
+.promo-slider-slides {
+    width: 300%;
+    transition: transform 0.8s ease;    
+}
+
+.promo-slider-slides  img {
+    float: left;
+    margin-left:50px;
+    padding:20px -10px;
+    margin-top:20px;
+    margin-left: 60px;
+    margin-right: 50px;
+}
+
+.promo-slider-1 {
+    width: 940px;
+}
+
+.promo-slider-2 img {
+    margin-left:100px;
+    margin-right:40px;
+}
+
+.promo-slider-3 img {
+    margin-left:10px;
+    margin-right:-50px;
+    margin-top:-40px;
+}
+
+.promo-slider-controls {
+    margin-bottom: -10px;
+    text-align: center;
+}
+
+.promo-slider { 
+    position: relative;
+}
+
+.promo-slider-controls {
+    position: absolute;
+    top:320px;
+    left:430px;
+}
+
+.promo-slider-controls  label {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin: 0 3px;
+    background-color: #cccccc;
+    border: 4px solid white;
+    border-radius: 50%;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.8);
+    transition: background-color 0.2s;
+    cursor: pointer;
+}
+
+#btn-1:checked ~ .promo-slider-controls label[for="btn-1"],
+#btn-2:checked ~ .promo-slider-controls label[for="btn-2"],
+#btn-3:checked ~ .promo-slider-controls label[for="btn-3"] {
+    background-color: #666666;
+}
+
+#btn-1:checked ~ .promo-slider-inner .promo-slider-slides { 
+    transform:translate(0);  
+}
+
+#btn-2:checked ~ .promo-slider-inner .promo-slider-slides { 
+    transform:translate(-880px);
+}
+    
+#btn-3:checked ~ .promo-slider-inner .promo-slider-slides { 
+    transform:translate(-1760px);
+}
+
+/*PROMO SLIDER end*/
+}
 /*SERVICES begin*/
 .services {
     width: 860px;
     margin: 0 auto;
     margin-top:75px;
     margin-bottom: 65px;
+    
 }
 
 .services  .service-1,
@@ -162,6 +258,7 @@ display: inline-block;
 .services  .service-3 {
     width: 240px;
     float: left;
+    padding:70px 0;
 }
 
 .services  .service-1,
